# endora

./: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties
core/: build.gradle
core/src/com/endora/: MainGame.java
core/src/com/endora/entity/: Entity.java
core/src/com/endora/entity/alive/: AliveEntity.java
core/src/com/endora/entity/alive/enemy/: Enemy.java
core/src/com/endora/entity/alive/npc/: Npc.java
core/src/com/endora/entity/alive/player/: Player.java
core/src/com/endora/entity/lifeless/: LifelessEntity.java
core/src/com/endora/entity/lifeless/projectile/: Projectile.java
core/src/com/endora/screen/game/: GameScreen.java
core/src/com/endora/screen/mainmenu/: MainMenuScreen.java
core/src/com/endora/ui/screen/game/: GameScreen.java
core/src/com/endora/ui/screen/mainmenu/: MainMenuScreen.java
core/src/main/kotlin/ray1024/endora/: Main.kt
core/src/ray1024/endora/: Cortex.java  MainGame.java
desktop/: build.gradle
desktop/src/com/endora/: DesktopConfiguration.java  DesktopLauncher.java
desktop/src/ray1024/endora/: DesktopConfig.java  DesktopLauncher.java
lwjgl3/: build.gradle
src/: main.cpp
src/engine/application/: Application.hpp  ApplicationConfiguration.hpp
src/engine/ecs/: Component.hpp  Ecs.hpp  Entity.hpp  System.hpp
src/engine/ecs/graphics/: GraphicsSystem.hpp
src/engine/ecs/graphics/sprite/batch/: SpriteBatch.hpp
src/engine/ecs/input/: InputSystem.hpp
src/engine/ecs/time/: TimeSystem.hpp
src/engine/ecs/window/: WindowSystem.hpp
src/engine/utils/codegeneration/: GetterSetter.hpp
src/engine/utils/context/: Context.hpp  ContextObject.hpp
src/engine/utils/threadpool/: ThreadPool.hpp
(+23 files in other folders)
